made the site actualy site

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>this is the gaq10?</p>
+<style>
+head {
+  text-align:center;
+  font-family:OCR-A Extended;
+  size:40pt;
+  padding-top:20px;
+}
+</style>
+<head>
+QAG10
+</head>
 </body>
 </html>
