--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <html>
 <body>
+<head>
+<title>QAG10</title>
 <style>
-head {
-  text-align:center;
-  font-family:OCR-A Extended;
-  size:40pt;
-  padding-top:20px;
+ .head {
+  color:red;
+  text-align: center;
+  font-family: ocr a;
+  font-size: 40pt;
+  padding-top: 20px;
+}
+body { background-color:black;
 }
 </style>
-<head>
-QAG10!??!?!
 </head>
+<div class="head">
+<b>
+<header>
+QAG10
+</header>
+</b>
+</div>
 </body>
 </html>
