updating qag10 (not gaq9 in in anyway whatsover btw what is a gaq9?)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
   padding-top: 20px;
 }
 body { background-color:black;
+color:red;
 }
+   .code {
+            font-family: ocr a, monospace;
+            background-color: #3d0000;
+            padding: 1rem;
+            border-radius: 5px;
+            margin: 2rem auto 0 auto;
+            max-width: 90%;
+        }
 </style>
 </head>
 <div class="head">
@@ -21,5 +30,15 @@ QAG10
 </header>
 </b>
 </div>
+  <div style="width: 100%; text-align: center; margin-bottom: 20px;">
+  <div class="code">
+            <p>Status: not Interloped yet</p>
+            <p>ID: QAG10</p>
+            <p>QAG: 10</p>
+            <p>tottaly not gaq9 just gaq10 (less interloped)</p>
+            <p>we gonna upload funny vids and other source engine stuff WEEEE</p>
+			            <p>Why tf does interloper have fanfics!?!?</p>
+</div>
+        </div>
 </body>
 </html>
