--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@ color:red;
             margin: 2rem auto 0 auto;
             max-width: 90%;
         }
+.mascot {
+            font-family: ocr a, monospace;
+            padding: 1rem;
+            border-radius: 5px;
+            margin: 2rem auto 0 auto;
+            max-width: 90%;
+			text-align:center;
+}
 </style>
 </head>
 <div class="head">
@@ -35,10 +43,16 @@ QAG10
             <p>Status: not Interloped yet</p>
             <p>ID: QAG10</p>
             <p>QAG: 10</p>
-            <p>tottaly not gaq9 just gaq10 (less interloped)</p>
+            <p>tottaly not gaq9 just gaq10 (less interloped)         ps:its pronounced quag 10</p>
             <p>we gonna upload funny vids and other source engine stuff WEEEE</p>
 			            <p>Why tf does interloper have fanfics!?!?</p>
 </div>
         </div>
+<div class="mascot">
+our mascot:CONE <p>
+TADZY STOP</p>
+<p>
+<img src="cone.jpg" alt="if youre seeing this #CONE#" style="font-size:20px;" width="200" height="200"></p>
+</div>
 </body>
 </html>
