--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body onload="startTime()">
 <head>
+    <link rel="icon" href="sbox.jpg" type="image/x-icon">
 <title>QAG10</title>
 <style>
  .head {
