--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+<meta content="qag10 - the one stop interloper theory board" property="og:title" />
+<meta content="gaq9 but for interloper theories" property="og:description" />
+<meta content="https://axolotl-in-void.github.io/gaq10/index.html" property="og:url" />
+<meta content="https://axolotl-in-void.github.io/gaq10/sbox.jpg" property="og:image" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
+<meta name="twitter:card" content="https://axolotl-in-void.github.io/gaq10/sbox.jpg">
 <body onload="startTime()">
 <head>
     <link rel="icon" href="sbox.jpg" type="image/x-icon">
