theory by roulxs kaard added

--- a/theory.html
+++ b/theory.html
@@ -103,7 +103,12 @@ theory board
 </header>
 </b>
 </div>
-<div class="main">nothing here yet :(</div>
+<div class="code">Submited by:roulxs Kaard<p>
+<b>The Oridance Pawn Theory</b><p> 
+The theory is that oridance is not really a "tool", <p>
+its actually the pawn we controll in view, thats why there would be maps like ord_error and ord_cry<p>
+because ord_cry could be a cry for help
+</div>
 <div class="button">
 <p ><a href="index.html">home</a>
 </div>
