--- a/recaps.html
+++ b/recaps.html
@@ -79,61 +79,32 @@ color:red;
 			text-align:center;
 			background-color: #3d0000;
  }
+a:link {
+font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-radius: 10px;
+}
+
+a:visited {
+font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-radius: 10px;
+}
+
+a:hover {
+font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-radius: 10px;
+}
+
+a:active {
+font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-radius: 10px;
+}
 </style>
 </head>
 <div class="head">
 <b>
 <header>
-QAG10
+recaps
 </header>
+<div class="button">
+<p ><a href="index.html">home</a>
+</div>
 </b>
 </div>
-<div class="main">Somehow the best theory place for this</div>
-  <div style="width: 100%; text-align: center; margin-bottom: 20px;">
-  <div class="code">
-            <p>Status: not Interloped yet</p>
-            <p>ID: QAG10</p>
-            <p>QAG: 10</p>
-            <p>tottaly not gaq9 just gaq10 (less interloped)         ps:its pronounced quag 10</p>
-            <p>we gonna upload funny vids, INTERLOPER theories and Help for newbies</p>
-			            <p>Why tf does interloper have fanfics!?!?</p>
-</div>
-        </div>
-<div class="mascot">
-cone <p>
-<p>
-<img src="cone.jpg" alt="if youre seeing this #CONE#" style="font-size:20px;" width="200" height="200"></p>
-<div class="mascot">
-TADZY STOP</p>
-Made by cge7-193
-</div>
-<hr style="color:red">
-<p>
-<img src="fatty.jpg" alt="if youre seeing this fatty" style="font-size:20px;" width="200" height="200"></p>
-</div>
-           <a href="theory.html"> <button class="play-button" id="viewMaps" style="background-color: #95ff14;text-align:center;">Theory board</button></a><a href="recaps.html"> <button class="play-button" id="viewMaps" style="background-color: #95ff14;text-align:center;">recaps</button></a>
-<p>
-<div id="time"class="time"></div>
-<script>
-function startTime() {
-  const today = new Date();
-  let h = today.getHours();
-  let m = today.getMinutes();
-  let s = today.getSeconds();
-  m = checkTime(m);
-  s = checkTime(s);
-  document.getElementById('time').innerHTML =  h + ":" + m + ":" + s;
-  setTimeout(startTime, 1000);
-}
-
-function checkTime(i) {
-  if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
-  return i;
-}
-</script>
-<div class="code">
-<p style="padding-top-top:0px. text-align: center;">
-cge7-193 restarts every hour so thought i would ad this here so people know when it restarts :)
-</div>
-</body>
-</html>
+<div class="main">nothing here yet (will update later when i have time so for now just the cge image)<p><hr style="color:red">
+<img src="1.png" width="500" height="300"><p><img src="2.png" width="500" height="300">
