--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Made by cge7-193
 <p>
 <img src="fatty.jpg" alt="if youre seeing this fatty" style="font-size:20px;" width="200" height="200"></p>
 </div>
-           <a href="theory.html"> <button class="play-button" id="viewMaps" style="background-color: #95ff14;text-align:center;">Theory board</button></a><a href="recaps.html"> <button class="play-button" id="viewMaps" style="background-color: #95ff14;text-align:center;">recaps</button></a>
+           <a href="theory.html"> <button class="play-button" id="viewMaps" style="background-color: #95ff14;text-align:center;">Theory board</button></a><p><a href="recaps.html"> <button class="play-button" id="viewMaps" style="background-color: #95ff14;text-align:center;">recaps</button></a>
 <p>
 <div id="time"class="time"></div>
 <script>
