--- a/theory.html
+++ b/theory.html
@@ -4,7 +4,10 @@
 <meta content="https://axolotl-in-void.github.io/gaq10/index.html" property="og:url" />
 <meta content="https://axolotl-in-void.github.io/gaq10/sbox.jpg" property="og:image" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
-<meta name="twitter:card" content="https://axolotl-in-void.github.io/gaq10/sbox.jpg">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="qag10 - the one stop interloper theory board" />
+    <meta name="twitter:description" content="gaq9 but for interloper theories" />
+    <meta name="twitter:image" content="https://axolotl-in-void.github.io/gaq10/sbox.jpg" />
 <body onload="startTime()">
 <head>
     <link rel="icon" href="sbox.jpg" type="image/x-icon">
