--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@ function checkTime(i) {
 <div class="code">
 <p style="padding-top-top:0px. text-align: center;">
 cge7-193 restarts every hour so thought i would ad this here so people know when it restarts :)
+<p>
+<p>
+Special thanks to: https://www.youtube.com/@chasedacurious
 </div>
 </body>
 </html>
