--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ QAG10
             <p>Status: not Interloped yet</p>
             <p>ID: QAG10</p>
             <p>QAG: 10</p>
-            <p>tottaly not gaq9 just gaq10 (less interloped)         ps:its pronounced quag 10</p>
+            <p>made this because NOTHING EVER HAPPENS ON gaq9         ps:its pronounced quag 10</p>
             <p>we gonna upload funny vids, INTERLOPER theories and Help for newbies</p>
 			            <p>Why tf does interloper have fanfics!?!?</p>
 </div>
