--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </div>
 
   <div class="code">
-    <p>Status: not Interloped yet</p>
+    <p>Status: umbrella_manned.bsp</p>
     <p>ID: QAG10</p>
     <p>QAG: 10</p>
     <p>made this because NOTHING EVER HAPPENS ON gaq9 (ps: it’s pronounced “quag 10”)</p>
