--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <p>Status: umbrella_manned.bsp</p>
     <p>ID: QAG10</p>
     <p>QAG: 10
-	 <p>qag 9?: no</p>
+	 <p>qag 9?: no u</p>
     <p>made this because NOTHING EVER HAPPENS ON gaq9 (ps: it’s pronounced “quag 10”)</p>
     <p>We gonna upload funny vids, INTERLOPER theories and Help for newbies</p>
     <p>Why tf does interloper have fanfics!?!?</p>
