--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
     <p>cge7-193 restarts every hour so thought I would add this here so people know when it restarts :)</p>
     <p>Special thanks to: <a href="https://www.youtube.com/@chasedacurious" style="color: #95ff14;">@chasedacurious</a></p>
 	<p>Credit to:Axolotl_in_void for the original qag10 and Circuitella for the further cleaning up and designing of the page
-  </div>
+<p>Btw credit to lunascape for the gaq9 code
+	</div>
 
   <script>
     function startTime() {
