--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
     <p>Special thanks to: <a href="https://www.youtube.com/@chasedacurious" style="color: #95ff14;">@chasedacurious</a></p>
 	<p>Credit to:Axolotl_in_void for the original qag10 and Circuitella for the further cleaning up and designing of the page
 <p>Btw credit to lunascape for the gaq9 code
+<p>AND THE BEST GAQ9er TOTALLY SIERRA AND NOT BOOTLEG
 	</div>
 
   <script>
