--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <p>Status: umbrella_manned.bsp</p>
     <p>ID: QAG10</p>
     <p>QAG: 10
-	 <p>qag 9?: no u</p>
+	 <p>qag 9™️?: no u</p>
     <p>made this because NOTHING EVER HAPPENS ON gaq9 (ps: it’s pronounced “quag 10”)</p>
     <p>We gonna upload funny vids, INTERLOPER theories and Help for newbies</p>
     <p>Why tf does interloper have fanfics!?!?</p>
@@ -218,8 +218,8 @@
     <p>cge7-193 restarts every hour so thought I would add this here so people know when it restarts :)</p>
     <p>Special thanks to: <a href="https://www.youtube.com/@chasedacurious" style="color: #95ff14;">@chasedacurious</a></p>
 	<p>Credit to:Axolotl_in_void for the original qag10 and Circuitella for the further cleaning up and designing of the page
-<p>Btw credit to lunascape for the gaq9 code
-<p>AND THE BEST GAQ9™️er:TOTALLY SIERRA AND NOT BOOTLEG 
+<p>Btw credit to lunascape for the gaq9™️ code
+<p>AND THE BEST GAQ9™️er:BOOTLEG (by the way you get my firstborn)
 	</div>
 
   <script>
