--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <p>ID: QAG10</p>
     <p>QAG: 10
 	 <p>qag 9™️?: no u</p>
-    <p>made this because NOTHING EVER HAPPENS ON gaq9 (ps: it’s pronounced “quag 10”)</p>
+    <p>made this because NOTHING EVER HAPPENS ON gaq9™️ (ps: it’s pronounced “quag 10”)</p>
     <p>We gonna upload funny vids, INTERLOPER theories and Help for newbies</p>
     <p>Why tf does interloper have fanfics!?!?</p>
   </div>
