Updated the recap section
(i only added a gif of roulx dancing because people need it.)

--- a/recaps.html
+++ b/recaps.html
@@ -102,12 +102,13 @@ font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-r
 <div class="head">
 <b>
 <header>
-recaps
+Recaps
 </header>
 <div class="button">
 <p ><a href="index.html">home</a>
 </div>
 </b>
 </div>
+<img src="deltarune-roulxs-kaard.gif" width="200" height="200"
 <div class="main">nothing here yet (will update later when i have time so for now just the cge image)<p><hr style="color:red">
 <img src="1.png" width="500" height="300"><p><img src="2.png" width="500" height="300">
