--- a/recaps.html
+++ b/recaps.html
@@ -109,6 +109,6 @@ Recaps
 </div>
 </b>
 </div>
-<img src="deltarune-roulxs-kaard.gif" width="200" height="200"
+<img src="deltarune-rouxls-kaard.gif" width="100" height="50"
 <div class="main">nothing here yet (will update later when i have time so for now just the cge image)<p><hr style="color:red">
 <img src="1.png" width="500" height="300"><p><img src="2.png" width="500" height="300">
