--- a/recaps.html
+++ b/recaps.html
@@ -110,4 +110,4 @@ Recaps
 </b>
 </div>
 <div class="main">nothing here yet (will update later when i have time so for now just the cge image)<p><hr style="color:red">
-<img src="1.png" width="500" height="300"><p><img src="2.png" width="500" height="300">
+<img src="The Cge7-193 Recap 2.png" width="1000" height="858"><p><img src="2.png" width="500" height="300">
