--- a/recaps.html
+++ b/recaps.html
@@ -13,90 +13,152 @@
     <link rel="icon" href="sbox.jpg" type="image/x-icon">
 <title>QAG10</title>
 <style>
- .head {
-  color:red;
-  text-align: center;
-  font-family: ocr a;
-  font-size: 40pt;
-  padding-top: 20px;
-}
-body { background-color:black;
-color:red;
-}
-   .code {
-            font-family: ocr a, monospace;
-            background-color: #3d0000;
-            padding: 1rem;
-            border-radius: 5px;
-            margin: 2rem auto 0 auto;
-            max-width: 90%;
-        }
-.mascot {
-            font-family: ocr a, monospace;
-            padding: 1rem;
-            border-radius: 5px;
-            margin: 2rem auto 0 auto;
-            max-width: 90%;
-			text-align:center;
-}
-.main {
-            font-family: ocr a, monospace;
-            padding: 1rem;
-            border-radius: 5px;
-            margin: 2rem auto 0 auto;
-            max-width: 90%;
-			text-align:center;
-}
-       .play-button {
-            background-color: #6c4fff;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            font-family: ocr a, monospace;
-            font-size: 1.2rem;
-            font-weight: bold;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 20px;
-            transition: all 0.3s;
-            animation: pulse 2s infinite;
-			text-align: center;
-
-    margin: 0 auto;
-    display: block;
-        }
-        
-        .play-button:hover {
-            background-color: #6c4fff;
-            box-shadow: 0 0 15px #6c4fff;
-            transform: scale(1.05);
-    margin: 0 auto;
-    display: block;
-        }
-.time {
-             font-family: ocr a, monospace;
-            padding: 20px 0px 20px 20px
-            border-radius: 5px;
-            margin: 2rem auto 0 auto;
-            max-width: 90%;
-			text-align:center;
-			background-color: #3d0000;
- }
-a:link {
-font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-radius: 10px;
-}
-
-a:visited {
-font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-radius: 10px;
-}
-
-a:hover {
-font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-radius: 10px;
-}
-
-a:active {
-font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-radius: 10px;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      background: radial-gradient(circle, #000000 0%, #110000 100%);
+      color: #ff4d4d;
+      font-family: 'Share Tech Mono', monospace;
+      overflow-x: hidden;
+      animation: pulseBackground 10s infinite alternate;
+    }
+    @keyframes pulseBackground {
+      0% { background-color: #110000; }
+      100% { background-color: #1a0000; }
+    }
+    header {
+      text-align: center;
+      font-size: 4rem;
+      padding: 30px 10px 10px;
+      color: #ff2a2a;
+      text-shadow: 0 0 12px red, 0 0 25px #ff0000;
+      letter-spacing: 2px;
+      border-bottom: 2px solid red;
+      margin-bottom: 20px;
+    }
+    .main, .code, .mascot {
+      margin: 20px auto;
+      max-width: 90%;
+      padding: 25px;
+      background-color: rgba(42, 0, 0, 0.85);
+      border-radius: 12px;
+      text-align: center;
+      box-shadow: 0 0 30px #ff000099;
+    }
+    .main {
+      font-size: 1.5rem;
+      text-shadow: 0 0 4px #ff4d4d;
+    }
+    .code p, .mascot p {
+      margin: 10px 0;
+    }
+    .play-button {
+      background: linear-gradient(135deg, #aaff00, #69f01d);
+      color: black;
+      border: none;
+      padding: 14px 30px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      font-family: 'Share Tech Mono', monospace;
+      border-radius: 10px;
+      margin: 25px auto;
+      cursor: pointer;
+      display: block;
+      box-shadow: 0 0 14px #95ff14, 0 0 4px #000 inset;
+      transition: transform 0.2s, box-shadow 0.3s;
+    }
+    .play-button:hover {
+      transform: scale(1.07);
+      box-shadow: 0 0 25px #aaff00;
+    }
+    .time {
+      font-size: 1.2rem;
+      background-color: #3d0000;
+      border: 1px solid #ff0000;
+      padding: 10px 20px;
+      margin: 20px auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px red;
+      text-align: center;
+      width: fit-content;
+      display: block;
+    }
+    img {
+      border-radius: 12px;
+      box-shadow: 0 0 10px red;
+      max-width: 90%;
+      height: auto;
+    }
+    iframe {
+      display: block;
+      margin: 30px auto;
+      border: 2px solid red;
+      border-radius: 10px;
+      box-shadow: 0 0 12px red;
+    }
+    hr {
+      border: none;
+      height: 2px;
+      background: linear-gradient(to right, transparent, red, transparent);
+      margin: 40px 0;
+    }
+    a {
+      text-decoration: none;
+    }
+    .radio-wrapper {
+      width: 52%;
+      max-width: 260px;
+      margin: 40px auto;
+      text-align: center;
+      position: relative;
+    }
+    .radio-wrapper img {
+      width: 100%;
+      border-radius: 15px;
+      box-shadow: 0 0 25px #ff4d4d;
+    }
+    .radio-wrapper audio {
+      position: absolute;
+      bottom: 12%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 45%;
+      height: 28px;
+      background: rgba(0, 0, 0, 0.6);
+      border-radius: 8px;
+      outline: none;
+      accent-color: #95ff14;
+    }
+    .gif-wrapper {
+      text-align: center;
+      margin: 30px auto;
+    }
+    .glow-gif {
+      display: inline-block;
+      max-width: 90%;
+      border-radius: 12px;
+      box-shadow: 0 0 20px red;
+    }
+    #umbrellaMan {
+      position: fixed;
+      top: -100px;
+      left: -100px;
+      width: 64px;
+      height: 64px;
+      z-index: 9999;
+      pointer-events: none;
+      image-rendering: pixelated;
+    }
+    #deathOverlay {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: black;
+      z-index: 99999;
+    }
 </style>
 </head>
 <div class="head">
@@ -105,7 +167,7 @@ font-family: ocr a, monospace;color:red;font-size:30px;outline: 2px red;border-r
 Recaps
 </header>
 <div class="button">
-<p ><a href="index.html">home</a>
+  <a href="index.html"><button class="play-button">Home</button></a>
 </div>
 </b>
 </div>
