--- a/theory.html
+++ b/theory.html
@@ -176,4 +176,5 @@ theory board
 The theory is that oridance is not really a "tool", <p>
 its actually the pawn we controll in view, thats why there would be maps like ord_error and ord_cry<p>
 because ord_cry could be a cry for help
+<img src="roul.gif" width="15" height="39">
 </div>
