--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <header>QAG10</header>
 
   <div class="main">
-    Somehow the best theory place for this.
+   the best theory place for this.
   </div>
 
   <div class="radio-wrapper">
