--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 
   <a href="theory.html"><button class="play-button">Theory board</button></a>
   <a href="recaps.html"><button class="play-button">Recaps</button></a>
+   <a href="dusty.html"><button class="play-button">scuffed</button></a>
 
   <div id="time" class="time"></div>
 
