--- a/recaps.html
+++ b/recaps.html
@@ -172,4 +172,4 @@ Recaps
 </b>
 </div>
 <div class="main">nothing here yet (will update later when i have time so for now just the cge image)<p><hr style="color:red">
-<img src="The Cge7-193 Recap 2.png" width="1000" height="858"><p><img src="2.png" width="1000" height="600"><p><img src="doors.png" width="600" height="600">
+<img src="The Cge7-193 Recap 2.png" width="1000" height="858"><p><img src="Cge7-193-Oridance Recap.png" width="1000" height="858"><p><img src="doors.png" width="600" height="600">
