--- a/theory.html
+++ b/theory.html
@@ -176,5 +176,6 @@ theory board
 The theory is that oridance is not really a "tool", <p>
 its actually the pawn we controll in view, thats why there would be maps like ord_error and ord_cry<p>
 because ord_cry could be a cry for help
-<img src="roul.gif" width="15" height="39">
+<img src="roul.gif" width="15" height="39"><p>
+<img src="image.png" width="600" height="600">
 </div>
