Add contributors to special thanks section
Updated the special thanks section to include additional contributors.

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
   <div class="code">
     <p>cge7-193 restarts every hour so thought I would add this here so people know when it restarts :)</p>
-    <p>Special thanks to: <a href="https://www.youtube.com/@chasedacurious" style="color: #95ff14;">@chasedacurious</a></p>
+    <p>Special thanks to: <a href="https://www.youtube.com/@chasedacurious" style="color: #95ff14;">@chasedacurious Snaken11 and GigaDwarf(yaoi)</a></p>
 	<p>Credit to:Axolotl_in_void for the original qag10 and Circuitella for the further cleaning up and designing of the page
 <p>Btw credit to lunascape for the gaq9™️ code
 <p>AND THE BEST GAQ9™️er:BOOTLEG
