--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
     <p>made this because NOTHING EVER HAPPENS ON gaq9™️ (ps: it’s pronounced “quag 10”)</p>
     <p>We gonna upload funny vids, INTERLOPER theories and Help for newbies</p>
     <p>Why tf does interloper have fanfics!?!?</p>
+	<img src="yaoi.jpg" alt="me and axol :3">
   </div>
 
   <div class="mascot">
