--- a/inputs.html
+++ b/inputs.html
@@ -164,11 +164,11 @@
 <div class="head">
 <b>
 <header>
-Recaps
+Bx70 Inputs
 </header>
 <div class="button">
   <a href="index.html"><button class="play-button">Home</button></a>
 </div>
 </b>
 </div>
-<div class="main">Iputs 1:W W W REN<p><hr style="color:red">
+<div class="main">Iputs 1:<p>W W W REN<p><hr style="color:red">
