Fix typo in button label for inputs

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <a href="theory.html"><button class="play-button">Theory board</button></a>
   <a href="recaps.html"><button class="play-button">Recaps</button></a>
    <a href="dusty.html"><button class="play-button">scuffed</button></a>
-	<a href="inputs.html"><button class="play-button">Inpust (gshift/bx70)</button></a>
+	<a href="inputs.html"><button class="play-button">Inputs (gshift/bx70)</button></a>
 
   <div id="time" class="time"></div>
 
