--- a/index.html
+++ b/index.html
@@ -185,9 +185,11 @@
     <p>QAG: 10
 	 <p>qag 9™️?: no u</p>
     <p>made this because NOTHING EVER HAPPENS ON gaq9™️ (ps: it’s pronounced “quag 10”)</p>
-    <p>We gonna upload funny vids, INTERLOPER theories and Help for newbies</p>
-    <p>Why tf does interloper have fanfics!?!?</p>
-	<img src="yaoi.jpg" alt="me and axol :3">
+    <p>Gaq9 BUT FOR gshift WOHOOOOOOOO</p>
+    <p>Why tf does interloper have fanfics!?!? and gshift dosnt...</p>
+	  <p>GIVE US CONTENT TRENTIENT. we are all insane</p>
+	<img src="yaoi.jpg" alt="me and axol :3" width="200" height="200">
+
   </div>
 
   <div class="mascot">
