clock strikes 12, midnight arrives

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <p>AND THE BEST GAQ9™️er:BOOTLEG
 	</div>
 
-  <img src="https://i.imgur.com/OX32Mha.png" id="umbrellaMan" alt="Umbrella Man" />
+  <img src="clock strikes 12, midnight arrives.png" id="umbrellaMan" alt="Umbrella Man" />
   <div id="deathOverlay"></div>
 <script>
   function startTime() {
