--- a/inputs.html
+++ b/inputs.html
@@ -172,3 +172,5 @@ Bx70 Inputs
 </b>
 </div>
 <div class="main">Iputs 1:<p>W W W REN<p><hr style="color:red">
+<img src="C:\Users\snaken11\Pictures\input1.png" alt=result of the input>
+    
